--- a/index.html
+++ b/index.html
@@ -1,28 +1,16 @@
 <html>
  <head>
-  <title>what</title>
-  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <title>sn3w's advanced and modern yet crap website</title>
+ <head>
   <style>
-   body{
-    background-color:   #000000;
-    font-family:      monospace;
-    font-size:             110%;
-    color:              #e62063;
-    padding-top:           15px;
-    padding-left:          15px;
+   .main {
+    padding: 10%;
    }
-
-   a         {text-decoration:    none;}
-   a:link    {color:           #00aaaa;}
-   a:visited {color:           #00aaaa;}
-   a:hover   {color:           #808080;}
-   
   </style>
- </head>
-
  <body>
- <div class=main>
-  <p>This is ma phage. 🐈🐈</p>
- </div>
- </body>
+   <div class="main">
+  <h3>Introduction</h3>
+  <p>Hello! I'm sn3w! This is my website. I code in C and am looking forward on working on my own linux system and wayland compositor. You can take a look at my roadmap repository to have an insight about the features. That's it (for now) 🐈 </P.
+   </div>
+  </body>
 </html>
