--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
  <head>
   <style>
    .main {
-    padding: 10%;
+    font-family: "Roboto", "Arial", sans-serif;
+    padding: 5%;
    }
   </style>
  <body>
