--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <h3>Introduction</h3>
     <hr>
   <p>Hello! I'm sn3w! This is my website.<br>
-   <b>What do I do?<b><br>
+   <b>What do I do?</b><br>
     I code in C<br>
     working on my own linux system and wayland compositor<br>
-   <b>What can you do?<b><br>
+   <b>What can you do?</b><br>
     You can take a look at my roadmap repository to have an insight about the features.
     <br>That's it (for now) 🐈 </p>
    </div>
