--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <html>
- <head>
-  <title>sn3w's advanced and modern yet crap website</title>
- <head>
-  <style>
-   .main {
-    font-family: "Roboto", "Arial", sans-serif;
-    padding: 2%;
-   }
-  </style>
- <body>
-   <div class="main">
-  <h3>Introduction</h3>
-    <hr>
-  <p>Hello! I'm sn3w! This is my website.<br>
-   <b>What do I do?</b><br>
-    I code in C<br>
-    working on my own linux system and wayland compositor<br>
-   <b>What can you do?</b><br>
-    You can take a look at my roadmap repository to have an insight about the features.
-    <br>That's it (for now) 🐈 </p>
-   </div>
-  </body>
+    <head>
+        <title>sn3w's advanced and modern yet crap website</title>
+    </head>
+    <style>
+        html, body {
+            background: url(https://raw.githubusercontent.com/sn3w/sn3w.github.io/main/tile.png);
+            background-color: black;
+            color: white;
+            font-family: 'Courier New', Courier, monospace;
+            padding: 3%;
+        }
+        .main {
+            background-color: black;
+            padding: 5%;
+            border: 2px solid white;
+        }
+    </style>
+    <body>
+        <div class="main">
+            <h3>Who am I?</h3>
+            <hr>
+            <p>Name: sn3w<br>
+            Language: C<br>
+            Works: Detoursea and Sweetheart</p><br>
+            <h3>GPG</h3>
+            <hr>
+            PUB: 46DE05B0EBD16B72
+            
+        </div>
+    </body>
 </html>
