--- a/index.html
+++ b/index.html
@@ -1,32 +1,73 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>sn3w's advanced and modern yet crap website</title>
-    </head>
-    <style>
-        html, body {
-            background: url(https://raw.githubusercontent.com/sn3w/sn3w.github.io/main/tile.png);
-            background-color: black;
-            color: white;
-            font-family: 'Courier New', Courier, monospace;
-            padding: 3%;
-        }
-        .main {
-            background-color: black;
-            padding: 5%;
-            border: 2px solid white;
-        }
-    </style>
-    <body>
-        <div class="main">
-            <h3>Who am I?</h3>
-            <hr>
-            <p>Name: sn3w<br>
-            Language: C<br>
-            Works: Detoursea and Sweetheart</p><br>
-            <h3>GPG</h3>
-            <hr>
-            PUB: 46DE05B0EBD16B72
-            
-        </div>
-    </body>
+<style>
+    html {
+        background-color: rgb(26, 26, 26);
+        color: white;
+        font-family: monospace;
+        padding-top: 8%;
+        padding-left: 24%;
+    }
+    .pad {
+        padding-left: 5%;
+    }
+    .pan {
+        padding-right: 21%;
+    }
+    .pan-last {
+        padding-right: 15%;
+    }
+</style>
+
+<span class="pan">FOO(1)</span>                  <span class="pan">Metaverse</span>                       <span class="pan">FOO(1)</span>
+<br>
+<br>
+NAME<br>
+    <div class="pad">
+        sn3w - low IQ NASA specimen
+    </div><br>
+<br>
+SYNOPSIS<br>
+    programs in C and sometimes studies<br>
+<br>
+DESCRIPTION<br>
+<div class="pad">
+     sn3w is a person who likes green color schemes. He never finishes<br>
+     his work and likes to not do so. He has listed some of his projects<br>
+     on his GitHub which he will never work on.<br>
+</div>
+<br>
+FILES<br>
+
+<div class="pad">
+            https://github.com/sn3w/roadmap<br>
+                The system wide configuration file. See foo(5) for fur-<br>
+                ther details.<br>
+            https://github.com/sn3w/sweetheart<br>
+                Linux system that will (hopelessly) configure itself properly<br>
+                to achieve its claimed objectives. Configuration done like window<br>
+                managers (configuration file) or NixOS.<br>
+            https://github.com/sn3w/detoursea<br>
+                Custom and minimal wayland compositor (as intelligent as monke)<br>
+                designed specifically for sweetheart.<br>
+          <br>
+          <br>
+</div>
+BUGS<br>
+    <div class="pad">
+        Too ugly.<br>
+     <br>
+    </div>
+AUTHOR<br>
+    <div class="pad"> 
+        sn3w
+    <br>
+    </div>
+    <br>
+SEE ALSO<br>
+    <div class="pad">
+        dylanaraps, dilyn-corner, konimex<br>
+     <br>
+    </div>
+<span class="pan">Web</span>                <span class="pan-last">Last change: NOVEMBER 2021</span>                    2<br>
 </html>
