(again, hopelessly) final edit

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@ DESCRIPTION<br>
 FILES<br>
 
 <div class="pad">
-            https://github.com/sn3w/roadmap<br>
+    <a href="https://github.com/sn3w/roadmap">roadmap</a><br>
                 The system wide configuration file. See foo(5) for fur-<br>
                 ther details.<br>
-            https://github.com/sn3w/sweetheart<br>
+    <a href="https://github.com/sn3w/sweetheart">sweetheart</a><br>
                 Linux system that will (hopelessly) configure itself properly<br>
                 to achieve its claimed objectives. Configuration done like window<br>
                 managers (configuration file) or NixOS.<br>
-            https://github.com/sn3w/detoursea<br>
+    <a href="https://github.com/sn3w/detoursea">detoursea</a><br>
                 Custom and minimal wayland compositor (as intelligent as monke)<br>
                 designed specifically for sweetheart.<br>
           <br>
