--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>what? 
+    </head>
 <style>
     html {
         background-color: rgb(26, 26, 26);
